# tessera-interactive-map

./: .gitignore  LICENSE  README.md  app georef.ipynb  app.ipynb  config.yaml  labels.json  pyproject.toml  requirements.txt  ssh_tutorial.md  viz.ipynb
interactive/: classifier.py  config.py  utils.py  visualisation.py
tesseraclassifier/: classifier_utils.py  geotessera_wrapper.py  habitat_classifier.py  viz_utils.py
